--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-      <title>Tutorial Creation</title>
+        <title>Tutorial Creation</title>
+        <style>
+            p {
+              margin: 35px 70px 50px;
+            }
+        </style>
     </head>
     <body>
       
