--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             }
         </style>
     </head>
-    <body>
+    <body style="background-color:#1c87c9;">
       
         <h1>Tutorial Creation</h1>
         <h2>Table of contents</h2>
