--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Tutorial Creation</title>
         <style>
             p {
-              margin: 350px 200px 200px;
+              margin: 0px 200px;
             }
         </style>
     </head>
