--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
             p {
               margin: 0px 200px;
             }
+            h {
+                margin: 0px 200px;
+            }
+            ul {
+                margin: 0px 200px;
+            }
+            ol {
+                margin: 0px 200px;
+            }
         </style>
     </head>
     <body style="background-color:#1c87c9;">
-      <center>
+
         <h1>Tutorial Creation</h1>
         <h2>Table of contents</h2>
         <ol>
@@ -121,6 +130,6 @@
             Then it establishes your next objective, which is talking to the old guy. Pretty cool :]!</p>
         
         <h3>That’s all, thank you for reading.</h3>
-        </center>
+
     </body>
 </html>
