--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
             p {
               margin: 0px 200px;
             }
-            h {
+            h1 {
+                margin: 0px 200px;
+            }
+            h2 {
+                margin: 0px 200px;
+            }
+            h3 {
                 margin: 0px 200px;
             }
             ul {
