--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <title>Tutorial Creation</title>
         <style>
             p {
-              margin: 35px 200px;
+              margin: 10px 200px;
             }
             h1 {
-                margin: 35px 200px;
+                margin: 70px 200px;
             }
             h2 {
                 margin: 35px 200px;
@@ -27,6 +27,7 @@
     <body style="background-color:#1c87c9;">
 
         <h1>Tutorial Creation</h1>
+        <p>Dani García</p>
         <h2>Table of contents</h2>
         <ol>
             <li>Definition</li>
