--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
         <title>Tutorial Creation</title>
         <style>
             p {
-              margin: 10px 200px;
+              margin: 10px 400px 10px 200px;
             }
             h1 {
-                margin: 70px 200px;
+                margin: 70px 200px 35px;
             }
             h2 {
-                margin: 35px 200px;
+                margin: 35px 400px 35px 200px;
             }
             h3 {
                 margin: 35px 200px;
             }
             ul {
-                margin: 35px 200px;
+                margin: 20px 200px 20px;
             }
             ol {
-                margin: 35px 200px;
+                margin: 20px 200px 20px;
             }
         </style>
     </head>
-    <body style="background-color:#1c87c9;">
+    <body style="background-color:#baf8ff;">
 
         <h1>Tutorial Creation</h1>
         <p>Dani García</p>
