--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <style>
             p {
               margin: 10px 400px 10px 200px;
+                color:125860;
             }
             h1 {
                 margin: 70px 200px 35px;
@@ -24,7 +25,7 @@
             }
         </style>
     </head>
-    <body style="background-color:#baf8ff;">
+    <body style="background-color:#70d8e4;">
 
         <h1>Tutorial Creation</h1>
         <p>Dani García</p>
