--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style>
             p {
               margin: 10px 400px 10px 200px;
-                color:125860;
+                color:#125860;
             }
             h1 {
                 margin: 70px 200px 35px;
