--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8">
         <title>Tutorial Creation</title>
         <style>
+            body {
+                color: #0d4147;
+            }
             p {
-              margin: 10px 400px 10px 200px;
-                color: #125860;
+                margin: 10px 400px 10px 200px;
             }
             h1 {
                 margin: 70px 200px 35px;
