--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <style>
             body {
                 color: #0d4147;
+                font-family: "Lato";
             }
             p {
                 margin: 10px 600px 10px 230px;
