--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             or there’s way too much stuff at once for them to process it.</p>
         <p>On the other hand, giving too little information 
         can make your players feel lost and frustrated, because they don’t know what to do or how to play the game.</p>
-        <p>Here’s a video with some good examples of this.</p>
         <p>God of War: Ragnarök has a glaring issue with over-explaining, or hand-holding,
             where the characters almost tell you the solution to a puzzle very early on, which is really frustrating, 
             because it takes away the satisfaction of figuring out and executing the solution to that problem on your own.</p>
@@ -91,7 +90,7 @@
             like for example, you’ve got two different mechanics, but you can’t explain one without explaining the other,
             or there’s a lot to one of them so you have to take a long time to explain it properly. 
             I think that’s okay as well, but maybe try to follow these criteria as much as you can.</p>
-        <p>Here’s an example from Pokémon Emerald, in which you watch this character catch a Pokémon, 
+        <p>Here’s an example from Pokémon Emerald, in which you watch this character, Wally, catch a Pokémon, 
             as a tutorial for, well, catching Pokémon. You have to wait for the full battle to play out which is really slow and boring (this is sped up 250%).
             But, it makes up for it by nicely fitting it into the narrative, and being a simple way to learn the mechanics.</p>
         <p>Let’s take a look at how Mario games do it. Levels in Modern Mario games follow this 4-step design: </p>
