--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <h2>2. Types of tutorials</h2>
         <p>Tutorials can be broken down into 3 categories:</p>
         <ul>
-            <li><b>Tutorials using instructions,</b> in which the game teaches you something through text.</li>
-            <li><b>Tutorials using examples,</b> in which an NPC will perform an action and you’ll have to repeat it.</li>
-            <li><b>Tutorials using level design,</b> where it’ll teach you something naturally throughout a stage.</li>
+            <li>Tutorials using <b>instructions,</b> in which the game teaches you something through text.</li>
+            <li>Tutorials using <b>examples,</b> in which an NPC will perform an action and you’ll have to repeat it.</li>
+            <li>Tutorials using <b>level design,</b> where it’ll teach you something naturally throughout a stage.</li>
         </ul>
         
         <h2>3. The problem</h2>
@@ -137,7 +137,7 @@
             And then it hits you with this shot of the huge world you’ll be able to explore.
             Then it establishes your next objective, which is talking to the old guy. Pretty cool :]!</p>
         
-        <h3>That’s all, thank you for reading.</h3>
+        <p><b>That’s all, thank you for reading.<b></p>
 
     </body>
 </html>
