--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             And then it hits you with this shot of the huge world you’ll be able to explore.
             Then it establishes your next objective, which is talking to the old guy. Pretty cool :]!</p>
         
-        <p><b>That’s all, thank you for reading.<b></p>
+        <h3>That’s all, thank you for reading.</h3>
 
     </body>
 </html>
