--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             The first level after the twist contains more than ten jam-packed mechanics from the previous games to compensate for the slow startup.
             That’s what this sudden rise is. It’s the unbalanced mechanic introductions that make this tutorial feel off.</p>
 
-        <h2>6. he first 3 minutes of playtime</h2>
+        <h2>6. The first 3 minutes of playtime</h2>
         <p>Finally, we have the first 3 minutes of playtime. What this principle says is basically that you have to have the players get invested
             and understand the main mechanics in the first 3 minutes of the game. Let’s see how Breath of the Wild does it.</p>
         <p>This first pan-out invites the player to investigate the pedestal. You have a little empty area to test the movement controls in.
