--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
                 margin: 10px 590px 10px 230px;
             }
             h1 {
+                background-color:#70d8e4;
                 margin: 70px 200px 15px;
+                color: #ffffff;
             }
             h2 {
                 margin: 50px 400px 35px 200px;
@@ -27,7 +29,7 @@
             }
         </style>
     </head>
-    <body style="background-color:#70d8e4;">
+    <body>
 
         <h1>Tutorial Creation</h1>
         <p>Dani García</p>
