--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             since very little new is being shown off, and it makes them expect something predictable and therefore boring.
             The first level after the twist contains more than ten jam-packed mechanics from the previous games to compensate for the slow startup.
             That’s what this sudden rise is. It’s the unbalanced mechanic introductions that make this tutorial feel off.</p>
+        <img src="file:///C:/Users/Dani/Downloads/V%C3%ADdeo%20sin%20t%C3%ADtulo%20%E2%80%90%20Hecho%20con%20Clipchamp%20(13).gif" alt="sploon3">
 
         <h2>6. The first 3 minutes of playtime</h2>
         <p>Finally, we have the first 3 minutes of playtime. What this principle says is basically that you have to have the players get invested
