--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             p {
                 margin: 10px 590px 10px 230px;
             }
+            img {
+                margin: 50px 400px 20px 200px;
+            }
             h1 {
                 margin: 70px 200px 15px;
             }
@@ -48,9 +51,10 @@
            and you just wanna get to the main game and explore already!!
             But tutorials aren’t just that. </p>
         <p>It doesn’t matter if they have a lot of text like a rulebook, 
-           a little text like these prompts here, 
+           a little text like prompts, 
             or no text at all. And it doesn’t matter if they’re at the beginning, the middle, or even the endgame. 
             <b>Tutorials are any way of teaching a mechanic to a player.</b></p>
+        <img src="https://images.app.goo.gl/zSLV1tWRSYSqW22X8" alt="Wii Party">
         <p>However, there are still good ways and bad ways of implementing tutorials, 
             and that’s what this page is about.</p>
         
