--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
            a little text like prompts, 
             or no text at all. And it doesn’t matter if they’re at the beginning, the middle, or even the endgame. 
             <b>Tutorials are any way of teaching a mechanic to a player.</b></p>
-        <img src="https://images.app.goo.gl/zSLV1tWRSYSqW22X8" alt="Wii Party">
+        <img src="https://images.app.goo.gl/zSLV1tWRSYSqW22X8.png" alt="Wii Party">
         <p>However, there are still good ways and bad ways of implementing tutorials, 
             and that’s what this page is about.</p>
         
