--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 margin: 10px 590px 10px 230px;
             }
             img {
-                margin: 50px 400px 20px 200px;
+                margin: 0px 400px 0px 200px;
             }
             h1 {
                 margin: 70px 200px 15px;
@@ -44,6 +44,7 @@
             <li>The learning curve</li>
             <li>First 3 minutes of playtime</li>
         </ol>
+        <img src="https://live.staticflickr.com/65535/52738230121_9bf8f466d6_b.jpg" alt="Kirby Star Allies">
 
         <h2>1. Definiton</h2>
         <p>When you think of a tutorial, maybe you’ll think of the section at the start of a game
@@ -54,7 +55,7 @@
            a little text like prompts, 
             or no text at all. And it doesn’t matter if they’re at the beginning, the middle, or even the endgame. 
             <b>Tutorials are any way of teaching a mechanic to a player.</b></p>
-        <img src="https://live.staticflickr.com/65535/52736801860_c1241e8243_b.jpg" alt="Wii Party">
+        <img src="https://live.staticflickr.com/65535/52738230146_ec7ce95177_b.jpg" alt="Wii Party / Zelda: Skyward Sword / Super Mario 3D World">
         <p>However, there are still good ways and bad ways of implementing tutorials, 
             and that’s what this page is about.</p>
         
@@ -65,6 +66,7 @@
             <li>Tutorials using <b>examples,</b> in which an NPC will perform an action and you’ll have to repeat it.</li>
             <li>Tutorials using <b>level design,</b> where it’ll teach you something naturally throughout a stage.</li>
         </ul>
+        <img src="https://live.staticflickr.com/65535/52738713608_54eea3d74d_b.jpg" alt="Logos">
         
         <h2>3. The problem</h2>
         <p>Now, the main problem with tutorials is that they can very easily give either too much information,
@@ -98,6 +100,7 @@
         <p>Here’s an example from Pokémon Emerald, in which you watch this character, Wally, catch a Pokémon, 
             as a tutorial for, well, catching Pokémon. You have to wait for the full battle to play out which is really slow and boring (this is sped up 250%).
             But, it makes up for it by nicely fitting it into the narrative, and being a simple way to learn the mechanics.</p>
+        <img src="https://live.staticflickr.com/65535/52738230181_3e225c79e1_b.jpg" alt="Pokémon Emerald">
         <p>Let’s take a look at how Mario games do it. Levels in Modern Mario games follow this 4-step design: </p>
         <ul>
             <li>First, it <b>introduces</b> a new mechanic –like these spinning star platforms- in a safe environment.</li>
@@ -110,6 +113,7 @@
             explanations of something they already know like the back of their hand, while leaving in the option for new players to learn the mechanics.
             In this game, Kirby Super Star, they ask you if you wanna watch the tutorial.
             Even if you say no, it’ll still play out… BUT imagine if it didn’t!! That’d be great.</p>
+        <img src="https://live.staticflickr.com/65535/52738481679_1daf16ea67_b.jpg" alt="Kirby Super Star">
         <p>The Binding of Isaac does this in a way that I really like. In the very first room you visit, there’s instructions on the floor for all the basic mechanics.
             There’s no enemies or hazards, so new players can try them out as they please before moving on to the main game, 
             while old players can completely ignore it.</p>
