--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             }
             img {
                 margin: 20px 400px 20px 200px;
-                height: 100px;
+                height: 200px;
             }
             h1 {
                 margin: 70px 200px 15px;
@@ -77,7 +77,7 @@
             or there’s way too much stuff at once for them to process it.</p>
         <p>On the other hand, giving too little information 
         can make your players feel lost and frustrated, because they don’t know what to do or how to play the game.</p>
-        <iframe height="100" src="https://www.youtube.com/watch?v=2OExw7PyPlQ&ab_channel=DesignDoc"/>
+        <iframe height="100" src="https://www.youtube.com/watch?v=2OExw7PyPlQ&ab_channel=DesignDoc"></iframe>
         
         <p>God of War: Ragnarök has a glaring issue with over-explaining, or hand-holding,
             where the characters almost tell you the solution to a puzzle very early on, which is really frustrating, 
