--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li>Tutorials using <b>examples,</b> in which an NPC will perform an action and you’ll have to repeat it.</li>
             <li>Tutorials using <b>level design,</b> where it’ll teach you something naturally throughout a stage.</li>
         </ul>
-        <img src="https://live.staticflickr.com/65535/52738713608_54eea3d74d_b.jpg" alt="Logos">
+        <img height="100" src="https://live.staticflickr.com/65535/52738713608_54eea3d74d_b.jpg" alt="Logos">
         
         <h2>3. The problem</h2>
         <p>Now, the main problem with tutorials is that they can very easily give either too much information,
