--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@
         <p>On the other hand, giving too little information 
         can make your players feel lost and frustrated, because they don’t know what to do or how to play the game.</p>
         <p>Here's a video with some good examples of this: https://www.youtube.com/watch?v=2OExw7PyPlQ&ab_channel=DesignDoc</p>
+        <img src="https://live.staticflickr.com/65535/52738809465_7f13f122c5_b.jpg" alt="Design Doc">
         
         <p>God of War: Ragnarök has a glaring issue with over-explaining, or hand-holding,
             where the characters almost tell you the solution to a puzzle very early on, which is really frustrating, 
-            because it takes away the satisfaction of figuring out and executing the solution to that problem on your own.</p>
-        <iframe height="200" src="https://www.youtube.com/watch?v=Ciuk0RkFRhg"></iframe>
+            because it takes away the satisfaction of figuring out and executing the solution to that problem on your own: 
+            https://www.youtube.com/watch?v=Ciuk0RkFRhg</p>
+        <img src="https://live.staticflickr.com/65535/52738881453_865a2b23bc_b.jpg" alt="God of War">
         <p>Be careful while trying to tread that line between over 
             and under-explaining.</p>
         
